force-app/main/default/objects/I_ST_Key_Statistics__c/I_ST_Key_Statistics__c.object-meta.xml
<CustomObject>
    <description>Object to store Key Statistics information for Educational Institution</description>
    <label>Key Statistics</label>
    <nameField>
        <displayFormat>KS-{0000}</displayFormat>
        <label>Key Statistics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>