force-app/main/default/objects/I_ST_Key_Statistics__c/fields/I_ST_Education_Institution__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Education_Institution__c</fullName>
    <label>Education Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Key Statistics</relationshipLabel>
    <relationshipName>Key_Statistics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>