force-app/main/default/objects/I_ST_Key_Statistics__c/fields/I_ST_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Last_Year__c</fullName>
    <description>USed on report to get the Last year data</description>
    <formula>IF((I_ST_Year__c = TEXT( YEAR(TODAY())-1) &amp;&amp; MONTH( TODAY()) &gt;6 ) || (I_ST_Year__c = TEXT( YEAR(TODAY())-2) &amp;&amp; MONTH( TODAY()) &lt;= 6 ) ,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year</label>
    <type>Text</type>
</CustomField>