force-app/main/default/objects/I_ST_Key_Statistics__c/fields/I_ST_No_Higher_Ed_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>I_ST_No_Higher_Ed_Enrolled__c</fullName>
    <label>No Higher Ed Enrolled</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>