force-app/main/default/objects/I_ST_Key_Statistics__c/fields/I_ST_No_LTU_1_4_Preference__c.field-meta.xml
<CustomField>
    <fullName>I_ST_No_LTU_1_4_Preference__c</fullName>
    <description>No of applicants choosing LTU as the first, second, third or fourth preferred university. As per IST-328</description>
    <label>No LTU 1-4 Preference</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>