force-app/main/default/objects/I_ST_Key_Statistics__c/fields/I_ST_No_Yr_12_Students__c.field-meta.xml
<CustomField>
    <fullName>I_ST_No_Yr_12_Students__c</fullName>
    <label>No Yr 12 Students</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>