force-app/main/default/objects/I_ST_Key_Statistics__c/fields/I_ST_Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Overall_Rating__c</fullName>
    <label>Overall Rating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>