force-app/main/default/objects/I_ST_Key_Statistics__c/fields/I_ST_Target_Percent__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Target_Percent__c</fullName>
    <label>Target Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>