force-app/main/default/objects/I_ST_Key_Statistics__c/fields/I_ST_Year__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>